src/test/deca/context/invalid/class0.deca
class A{
    int a;
} 
{
    A a=new A();
    a<=1;
    
}